--- a/NeverWriteAgain/NWMenuTableViewCell.xib
+++ b/NeverWriteAgain/NWMenuTableViewCell.xib
@@ -1,18 +1,64 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="NWMenuTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="597" id="KGk-i7-Jjw" customClass="NWMenuTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="321"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lesson Name Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CA3-vc-VZB" userLabel="Lesson Name Label">
+                        <rect key="frame" x="0.0" y="8" width="320" height="20"/>
+                        <animations/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="KJ2-aJ-eaK"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lesson Description Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gvy-gU-u6l" userLabel="Lesson Description Label">
+                        <rect key="frame" x="28" y="28" width="264" height="40"/>
+                        <animations/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="Web-D6-ppR"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <animations/>
+                <constraints>
+                    <constraint firstItem="gvy-gU-u6l" firstAttribute="top" secondItem="CA3-vc-VZB" secondAttribute="bottom" id="5Wv-qG-1y2"/>
+                    <constraint firstItem="gvy-gU-u6l" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Cra-hC-QZe"/>
+                    <constraint firstItem="gvy-gU-u6l" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="20" id="FcN-lw-oRH"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="gvy-gU-u6l" secondAttribute="trailing" constant="20" id="MAG-8O-WRI"/>
+                    <constraint firstItem="gvy-gU-u6l" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="aaK-pn-FhQ"/>
+                    <constraint firstItem="CA3-vc-VZB" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="nRN-gO-XqK"/>
+                    <constraint firstItem="CA3-vc-VZB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="tg2-sG-d9F"/>
+                    <constraint firstItem="CA3-vc-VZB" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="yYu-6l-yIH"/>
+                </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="Cra-hC-QZe"/>
+                        <exclude reference="aaK-pn-FhQ"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
+            <animations/>
+            <connections>
+                <outlet property="lessonDescriptionLabel" destination="gvy-gU-u6l" id="rzv-eD-YGA"/>
+                <outlet property="lessonNameLabel" destination="CA3-vc-VZB" id="UGY-cd-0oZ"/>
+            </connections>
+            <point key="canvasLocation" x="310" y="461.5"/>
         </tableViewCell>
     </objects>
 </document>
