--- a/NeverWriteAgain/Base.lproj/Main.storyboard
+++ b/NeverWriteAgain/Base.lproj/Main.storyboard
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9kZ-fD-tsH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9kZ-fD-tsH">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
         <scene sceneID="4Rs-ln-f8D">
             <objects>
                 <navigationController id="9kZ-fD-tsH" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OXY-rD-rbm">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="OXY-rD-rbm">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
                     </navigationBar>
                     <connections>
-                        <segue destination="yH9-Jk-ZSh" kind="relationship" relationship="rootViewController" id="uWs-Z7-UzO"/>
+                        <segue destination="JyG-9g-6Nd" kind="relationship" relationship="rootViewController" id="kLd-fL-rfC"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Izh-wK-exa" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -21,38 +23,73 @@
             <point key="canvasLocation" x="-866" y="-33"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="1bi-gS-ct1">
+        <scene sceneID="i6E-jy-ui7">
             <objects>
-                <tableViewController storyboardIdentifier="NWViewController" id="yH9-Jk-ZSh" customClass="NWViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="wu0-DY-1pm">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <viewController id="JyG-9g-6Nd" customClass="NWViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Xck-rN-dGL"/>
+                        <viewControllerLayoutGuide type="bottom" id="mvd-fA-OHK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="LwD-hu-dvE">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" misplaced="YES" placeholder="Filter Tutorials" translatesAutoresizingMaskIntoConstraints="NO" id="tqa-u6-byO">
+                                <rect key="frame" x="20" y="64" width="560" height="44"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="XTg-YC-li4"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="XTg-YC-li4"/>
+                                    </mask>
+                                </variation>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iav-b9-1s2">
+                                <rect key="frame" x="0.0" y="108" width="600" height="492"/>
+                                <animations/>
+                            </tableView>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="BJV-YK-ciC">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BJV-YK-ciC" id="Vh3-VK-ZSw">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="yH9-Jk-ZSh" id="kDN-Vb-Dsy"/>
-                            <outlet property="delegate" destination="yH9-Jk-ZSh" id="Dfg-fe-U3F"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="tIX-NE-bFI"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sKh-xR-GoB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <constraints>
+                            <constraint firstItem="iav-b9-1s2" firstAttribute="width" secondItem="LwD-hu-dvE" secondAttribute="width" id="0FB-7n-Yo2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="iav-b9-1s2" secondAttribute="trailing" id="0G2-yy-LO4"/>
+                            <constraint firstItem="iav-b9-1s2" firstAttribute="top" secondItem="tqa-u6-byO" secondAttribute="bottom" id="3mW-6r-G1d"/>
+                            <constraint firstItem="tqa-u6-byO" firstAttribute="top" secondItem="Xck-rN-dGL" secondAttribute="bottom" id="FxB-mT-iRo"/>
+                            <constraint firstItem="iav-b9-1s2" firstAttribute="centerX" secondItem="LwD-hu-dvE" secondAttribute="centerX" id="HPY-KA-Pnj"/>
+                            <constraint firstItem="mvd-fA-OHK" firstAttribute="top" secondItem="iav-b9-1s2" secondAttribute="bottom" id="LNV-bS-clW"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="tqa-u6-byO" secondAttribute="trailing" id="iEu-RO-IkF"/>
+                            <constraint firstItem="iav-b9-1s2" firstAttribute="leading" secondItem="LwD-hu-dvE" secondAttribute="leadingMargin" id="nR6-cg-lcg"/>
+                            <constraint firstItem="tqa-u6-byO" firstAttribute="leading" secondItem="LwD-hu-dvE" secondAttribute="leadingMargin" constant="-20" id="twX-gv-eK6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="tqa-u6-byO" secondAttribute="trailing" constant="-20" id="ufg-pv-7R1"/>
+                            <constraint firstItem="tqa-u6-byO" firstAttribute="leading" secondItem="LwD-hu-dvE" secondAttribute="leadingMargin" id="yUJ-DI-Fcb"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="twX-gv-eK6"/>
+                                <exclude reference="ufg-pv-7R1"/>
+                                <exclude reference="0G2-yy-LO4"/>
+                                <exclude reference="nR6-cg-lcg"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" id="IvS-aY-Tvr"/>
+                    <connections>
+                        <outlet property="searchBar" destination="tqa-u6-byO" id="L0Q-Wz-zgk"/>
+                        <outlet property="tableView" destination="iav-b9-1s2" id="vwY-O1-uQn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c2W-2q-DaM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-84" y="-33"/>
+            <point key="canvasLocation" x="-132" y="-33"/>
         </scene>
-        <!--Keyboard Move Text View-->
+        <!--Keyboard Move Text View Controller-->
         <scene sceneID="XpV-PP-T3R">
             <objects>
-                <viewController id="SMd-xc-gWW" customClass="NWKeyboardMoveTextView" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NWKeyboardMoveTextViewController" id="SMd-xc-gWW" customClass="NWKeyboardMoveTextViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="mpT-Of-PGu"/>
                         <viewControllerLayoutGuide type="bottom" id="1pc-ka-NE4"/>
@@ -60,8 +97,55 @@
                     <view key="view" contentMode="scaleToFill" id="kYg-oy-Fb0">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rJm-ZI-ekS" userLabel="Clear Text Field Focus Button">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.88248783349990845" green="0.96020287275314331" blue="0.97438710927963257" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="&quot;Invisible&quot; button to clear textview focus"/>
+                                <connections>
+                                    <action selector="clearTextViewFocusButtonPressed:" destination="SMd-xc-gWW" eventType="touchUpInside" id="c8q-iG-04h"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Instantly Moves" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fhc-wv-uDE" userLabel="Instant TextField">
+                                <rect key="frame" x="0.0" y="540" width="600" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="dJl-kt-GHI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Animates With Keyboard" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ncD-yi-xdg" userLabel="Animated TextField">
+                                <rect key="frame" x="0.0" y="570" width="600" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="A9x-8a-tfi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ncD-yi-xdg" firstAttribute="top" secondItem="Fhc-wv-uDE" secondAttribute="bottom" id="3tA-Gf-fSg"/>
+                            <constraint firstItem="ncD-yi-xdg" firstAttribute="width" secondItem="kYg-oy-Fb0" secondAttribute="width" id="HSQ-Fi-8cD"/>
+                            <constraint firstItem="Fhc-wv-uDE" firstAttribute="centerX" secondItem="kYg-oy-Fb0" secondAttribute="centerX" id="K45-E8-4as"/>
+                            <constraint firstItem="rJm-ZI-ekS" firstAttribute="width" secondItem="kYg-oy-Fb0" secondAttribute="width" id="LcT-2i-UvO"/>
+                            <constraint firstItem="rJm-ZI-ekS" firstAttribute="centerX" secondItem="kYg-oy-Fb0" secondAttribute="centerX" id="WVV-6Q-xXU"/>
+                            <constraint firstItem="rJm-ZI-ekS" firstAttribute="height" secondItem="kYg-oy-Fb0" secondAttribute="height" id="YoP-Y8-9tR"/>
+                            <constraint firstItem="ncD-yi-xdg" firstAttribute="centerX" secondItem="kYg-oy-Fb0" secondAttribute="centerX" id="dWJ-Mv-PSD"/>
+                            <constraint firstItem="Fhc-wv-uDE" firstAttribute="width" secondItem="kYg-oy-Fb0" secondAttribute="width" id="egh-2R-FyL"/>
+                            <constraint firstItem="rJm-ZI-ekS" firstAttribute="centerY" secondItem="kYg-oy-Fb0" secondAttribute="centerY" id="tLw-0c-HrF"/>
+                            <constraint firstItem="1pc-ka-NE4" firstAttribute="top" secondItem="ncD-yi-xdg" secondAttribute="bottom" id="vZn-zd-lRZ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="animatedTextField" destination="ncD-yi-xdg" id="Ixf-iC-ky0"/>
+                        <outlet property="clearTextFieldFocusButton" destination="rJm-ZI-ekS" id="kb7-vO-6gK"/>
+                        <outlet property="instantMovementTextField" destination="Fhc-wv-uDE" id="EpP-8H-LLn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fwt-bM-DbX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
