--- a/NeverWriteAgain/Base.lproj/Main.storyboard
+++ b/NeverWriteAgain/Base.lproj/Main.storyboard
@@ -22,6 +22,91 @@
             </objects>
             <point key="canvasLocation" x="-866" y="-33"/>
         </scene>
+        <!--Letter Color View Controller-->
+        <scene sceneID="5bF-Qx-VJn">
+            <objects>
+                <viewController storyboardIdentifier="NWLetterColorViewController" id="4U1-8R-lKp" customClass="NWLetterColorViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yRL-yM-fB6"/>
+                        <viewControllerLayoutGuide type="bottom" id="NIh-YU-891"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7ZZ-mj-k0G">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="49f-9H-aYm">
+                                <rect key="frame" x="0.0" y="20" width="600" height="30"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="UAF-rl-QBD"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rfv-0u-Otp" userLabel="LetterColorView">
+                                <rect key="frame" x="200" y="200" width="200" height="200"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="A" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ec0-1Z-8g6">
+                                        <rect key="frame" x="0.0" y="1" width="200" height="200"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="80"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" red="0.0" green="0.78431379800000001" blue="0.3058823645" alpha="1" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstItem="ec0-1Z-8g6" firstAttribute="centerY" secondItem="rfv-0u-Otp" secondAttribute="centerY" id="Ij2-a5-5n7"/>
+                                    <constraint firstItem="ec0-1Z-8g6" firstAttribute="height" secondItem="rfv-0u-Otp" secondAttribute="height" id="Lq0-pN-msm"/>
+                                    <constraint firstItem="ec0-1Z-8g6" firstAttribute="width" secondItem="rfv-0u-Otp" secondAttribute="width" id="SCJ-xO-aRP"/>
+                                    <constraint firstAttribute="width" constant="200" id="SsP-YT-aL9"/>
+                                    <constraint firstItem="ec0-1Z-8g6" firstAttribute="centerX" secondItem="rfv-0u-Otp" secondAttribute="centerX" id="g9B-jQ-715"/>
+                                    <constraint firstAttribute="height" constant="200" id="pWh-QD-O5v"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QKv-Ll-7KM" userLabel="Description TextLabel">
+                                <rect key="frame" x="20" y="66" width="560" height="100"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="9qt-or-EHZ"/>
+                                </constraints>
+                                <string key="text">This ViewController is the delegate of the NWTabOptionHeaderView. It will respond to events from the header view with its own custom behavior.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="49f-9H-aYm" firstAttribute="width" secondItem="7ZZ-mj-k0G" secondAttribute="width" id="4hS-Uu-Gpm"/>
+                            <constraint firstItem="rfv-0u-Otp" firstAttribute="centerY" secondItem="7ZZ-mj-k0G" secondAttribute="centerY" id="8ff-tM-J0M"/>
+                            <constraint firstItem="QKv-Ll-7KM" firstAttribute="width" secondItem="7ZZ-mj-k0G" secondAttribute="width" id="9ZT-fg-Q3m"/>
+                            <constraint firstItem="rfv-0u-Otp" firstAttribute="top" secondItem="QKv-Ll-7KM" secondAttribute="bottom" constant="34" id="9gZ-n2-G8e"/>
+                            <constraint firstItem="49f-9H-aYm" firstAttribute="top" secondItem="yRL-yM-fB6" secondAttribute="bottom" id="Hjh-MY-kvo"/>
+                            <constraint firstItem="QKv-Ll-7KM" firstAttribute="centerX" secondItem="7ZZ-mj-k0G" secondAttribute="centerX" id="TaA-Yr-nUV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="QKv-Ll-7KM" secondAttribute="trailing" id="Xtl-rL-eHA"/>
+                            <constraint firstItem="QKv-Ll-7KM" firstAttribute="leading" secondItem="7ZZ-mj-k0G" secondAttribute="leadingMargin" id="g9E-9F-SwN"/>
+                            <constraint firstItem="49f-9H-aYm" firstAttribute="centerX" secondItem="7ZZ-mj-k0G" secondAttribute="centerX" id="vmd-KS-Kkf"/>
+                            <constraint firstItem="rfv-0u-Otp" firstAttribute="centerX" secondItem="7ZZ-mj-k0G" secondAttribute="centerX" id="xwD-7k-6Hn"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="9ZT-fg-Q3m"/>
+                                <exclude reference="TaA-Yr-nUV"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="currentModeLabel" destination="ec0-1Z-8g6" id="8ey-i6-c5n"/>
+                        <outlet property="letterColorView" destination="rfv-0u-Otp" id="P3c-JW-1V8"/>
+                        <outlet property="tabOptionHeaderPlaceHolderView" destination="49f-9H-aYm" id="Jxh-sa-GPa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UFQ-7e-jAs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="642" y="-826"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="i6E-jy-ui7">
             <objects>
